trunk/Archive2/ca/e368073939b37a/output
main.cpp:5:1: error: static assertion failed: No tag founded
 static_assert(false, "No tag founded");
 ^
